//   Copyright 2018 Google Inc. All Rights Reserved.
//
//   Licensed under the Apache License, Version 2.0 (the "License");
//   you may not use this file except in compliance with the License.
//   You may obtain a copy of the License at
//
//       http://www.apache.org/licenses/LICENSE-2.0
//
//   Unless required by applicable law or agreed to in writing, software
//   distributed under the License is distributed on an "AS IS" BASIS,
//   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//   See the License for the specific language governing permissions and
//   limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.google.trillian-examples.proto";
option java_outer_classname = "ShardServiceProto";
option go_package = "github.com/google/trillian-examples/railgun/shard";

package shard;

message ProvisionHandshakeRequest {
}

message ProvisionHandshakeResponse {
  string token = 1;
}

message WrappedConfig {
  string token = 1;
  bytes shard_config = 2;
}

message ShardProvisionRequest {
  reserved 1;
  // This should contain a marshalled WrappedConfig proto.
  bytes shard_config = 2;
  // This should contain the signature of the configuration proto.
  // The format is as used in the main trillian code.
  bytes config_sig = 3;
}

message ShardProvisionResponse {
  reserved 1;
  // This should contain a marshalled ShardProto. This represents the
  // config that was instated by the shard and may differ from the request.
  // Keys may be redacted and timestamps updated for example.
  bytes provisioned_config = 2;
  // This should contain the signature of the configuration proto.
  // The format is as used in the main trillian code.
  bytes config_sig = 3;
}

message GetShardConfigRequest {
  // This request is not authenticated as it returns only public data.
}

message GetShardConfigResponse {
  reserved 1;
  // This should contain a marshalled ShardProto. This represents the
  // config that was instated by the shard and may differ from the request.
  // Keys may be redacted and timestamps updated for example.
  bytes provisioned_config = 2;
  // This should contain the signature of the configuration proto.
  // The format is as used in the main trillian code.
  bytes config_sig = 3;
}

service ShardService {
  rpc ProvisionHandshake(ProvisionHandshakeRequest) returns (ProvisionHandshakeResponse) {};
  rpc Provision(ShardProvisionRequest) returns (ShardProvisionResponse) {};
  rpc GetConfig(GetShardConfigRequest) returns(GetShardConfigResponse) {};
}