//   Copyright 2018 Google Inc. All Rights Reserved.
//
//   Licensed under the Apache License, Version 2.0 (the "License");
//   you may not use this file except in compliance with the License.
//   You may obtain a copy of the License at
//
//       http://www.apache.org/licenses/LICENSE-2.0
//
//   Unless required by applicable law or agreed to in writing, software
//   distributed under the License is distributed on an "AS IS" BASIS,
//   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//   See the License for the specific language governing permissions and
//   limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.google.trillian-examples.proto";
option java_outer_classname = "ShardProto";
option go_package = "github.com/google/trillian-examples/railgun/shard/shardproto";

import "github.com/google/trillian/crypto/keyspb/keyspb.proto";
import "google/protobuf/timestamp.proto";

package shard;

enum ShardState {
  SHARD_STATE_UNKNOWN = 0;
  SHARD_STATE_NEEDS_INIT = 1;
  SHARD_STATE_ACTIVE = 2;
  SHARD_STATE_FAILED = 3;
}

message ShardProto {
  bytes uuid = 1;
  ShardState state = 2;
  bytes key_hash = 3;
  string description = 4;
  // Time of shard creation.
  // Readonly.
  google.protobuf.Timestamp create_time = 5;
  // Time of shard update.
  google.protobuf.Timestamp update_time = 6;
  // Server private key - this is never sent on the wire.
  keyspb.PrivateKey private_key = 7;
  // Server public key - this is returned to the provisioning server
  // during setup.
  keyspb.PublicKey public_key = 8;
}
